# app/Http/Resources/StoreResource.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class StoreResource extends JsonResource
+{
+  public function toArray(Request $request): array
+  {
+    return [
+      'id'             => $this->id,
+      'name'           => $this->name,
+      'cuit'           => $this->cuit,
+      'address'        => $this->address,
+      'state'          => $this->state,
+      'city'           => $this->city,
+      'country'        => $this->country,
+      'phone'          => $this->phone,
+      'email'          => $this->email,
+      'is_active'      => $this->is_active,
+      'inactive_reason' => $this->inactive_reason,
+      'inactive_at'    => $this->inactive_at,
+      'url_logo'       => $this->url_logo,
+      'trial_ends_at'  => $this->trial_ends_at,
+      'created_at'     => $this->created_at,
+      'updated_at'     => $this->updated_at,
+      'business_type'  => BusinessTypesResource::make($this->whenLoaded('businessType')),
+      'plan' => PlanResource::make($this->whenLoaded('plan')),
+    ];
+  }
+}
